MAV-2817 faucet reskin

--- a/src/app/vars.css
+++ b/src/app/vars.css
@@ -12,4 +12,6 @@
     --color-gray-border-secondary: #333333;
     --color-braun: #E6822640;
     --color-blue-main: #5F58FF;
+    --color-red-main: #FF3E3E;
+    --color-green-main: #00B71D;
 }
