--- a/src/components/Faucet/styled.css
+++ b/src/components/Faucet/styled.css
@@ -41,3 +41,8 @@
 .faucet-btn-wrapper {
     max-width: 195px;
 }
+.select-token-option {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
