--- a/src/app/vars.css
+++ b/src/app/vars.css
@@ -1,17 +1,17 @@
 :root {
-    --font-main: 'Aeonik', sans-serif;
+  --font-main: "Aeonik", sans-serif;
 
-    --color-black-main: #010101;
-    --color-black-secondary: #131313;
-    --color-gray-main: #202020;
-    --color-gray-light: #F4F4F480;
-    --color-gray-border: #585858;
-    --color-white: #FFFFFF;
-    --color-white-text: #F4F4F4;
-    --color-white-secondary: #B5B5B5;
-    --color-gray-border-secondary: #333333;
-    --color-braun: #E6822640;
-    --color-blue-main: #5F58FF;
-    --color-red-main: #FF3E3E;
-    --color-green-main: #00B71D;
+  --color-black-main: #010101;
+  --color-black-secondary: #131313;
+  --color-gray-main: #202020;
+  --color-gray-light: #f4f4f480;
+  --color-gray-border: #585858;
+  --color-white: #ffffff;
+  --color-white-text: #f4f4f4;
+  --color-white-secondary: #b5b5b5;
+  --color-gray-border-secondary: #333333;
+  --color-braun: #e6822640;
+  --color-blue-main: #5f58ff;
+  --color-red-main: #ff3e3e;
+  --color-green-main: #00b71d;
 }
