--- a/src/components/Faucet/styled.css
+++ b/src/components/Faucet/styled.css
@@ -46,3 +46,16 @@
   align-items: center;
   gap: 12px;
 }
+.my-address-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.my-address-wrapper-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: -0.02em;
+  color: var(--color-white-text);
+}
+
