--- a/src/components/Header/styled.css
+++ b/src/components/Header/styled.css
@@ -1,7 +1,9 @@
 .header-wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 16px 100px;
   background: var(--color-black-secondary);
   width: 100%;
+  height: 75px;
 }
