MAV-2817 faucet reskin

--- a/src/app/font.css
+++ b/src/app/font.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: "Aeonik";
-  src: url("/fonts/Aeonik-Regular.woff2") format("woff2");
+  src: url("/public/fonts/Aeonik-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Aeonik";
-  src: url("/fonts/Aeonik-Bold.woff2") format("woff2");
+  src: url("/public/fonts/Aeonik-Bold.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Aeonik";
-  src: url("/fonts/Aeonik-Medium.woff2") format("woff2");
+  src: url("/public/fonts/Aeonik-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
 }
