--- a/src/components/UserInfo/styled.css
+++ b/src/components/UserInfo/styled.css
@@ -36,3 +36,20 @@
 }
 .user-info-wrapper {
 }
+.user-info-wrapper .dropdown-toggle::after {
+  display: none;
+}
+.user-info-wrapper .dropdown-menu {
+  background: var(--color-gray-main);
+  padding: 0;
+  border: 1px solid var(--color-gray-border);
+  overflow: hidden;
+}
+.user-info-wrapper .dropdown-item {
+  color: var(--color-white-text);
+  padding: 12px 16px;
+}
+.user-info-wrapper .dropdown-item:hover {
+  background: #313131;
+  color: var(--color-white-text);
+}
