--- a/src/app/App.css
+++ b/src/app/App.css
@@ -43,10 +43,53 @@ img {
 }
 
 .main-wrapper {
-  background: var(--color-black-main);
   min-height: 100vh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  background: radial-gradient(
+    98.05% 261.61% at 1.95% 3.59%,
+    rgba(38, 38, 38, 0.4) 0%,
+    rgba(83, 83, 83, 0) 100%
+  );
+  backdrop-filter: blur(42px);
+}
+.main-wrapper .orangeShadow {
+  content: "";
+  right: -2200px;
+  left: 0;
+  bottom: 0;
+  top: -500px;
+  display: block;
+  position: absolute;
+  backdrop-filter: blur(700px);
+  background: rgb(255, 125, 53);
+  background: radial-gradient(
+    circle,
+    rgba(255, 125, 53, 0.2847732843137255) 0%,
+    rgba(255, 125, 53, 0.1951374299719888) 24%,
+    rgba(255, 255, 255, 0) 43%
+  );
+  z-index: -1;
+}
+.main-wrapper .blueShadow {
+  content: "";
+  left: 0;
+  right: -400px;
+  top: -1000px;
+  bottom: 0;
+  display: block;
+  position: absolute;
+  backdrop-filter: blur(700px);
+  background: rgb(95, 88, 255);
+  background: radial-gradient(
+    circle,
+    rgba(95, 88, 255, 0.321187850140056) 0%,
+    rgba(95, 88, 255, 0.1419161414565826) 24%,
+    rgba(255, 255, 255, 0) 43%
+  );
+  z-index: -1;
 }
