--- a/src/components/Footer/styled.css
+++ b/src/components/Footer/styled.css
@@ -1,19 +1,11 @@
 .footer-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 100px;
-  background: var(--color-black-secondary);
-  width: 100%;
-}
-.footer-links-list {
+  justify-content: center;
   display: flex;
   gap: 12px;
-}
-.footer-text {
-  font-size: 14px;
-  font-weight: 400;
-  color: var(--color-white);
+  align-items: center;
+  padding: 20px 44px;
+  background: transparent;
+  width: 100%;
 }
 .footer-link {
   color: var(--color-white);
