--- a/src/components/Header/styled.css
+++ b/src/components/Header/styled.css
@@ -2,14 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 100px;
-  background: var(--color-black-secondary);
+  padding: 12px 44px;
+  background: transparent;
+  border-bottom: 1px solid #ffffff40;
   width: 100%;
-  height: 75px;
+  height: 67px;
 }
 .header-logo-image {
   width: 172px;
-}
-.header-wrapper .header-wallet {
-  height: 43px;
 }
