--- a/src/components/UI/Input/input.css
+++ b/src/components/UI/Input/input.css
@@ -4,12 +4,17 @@
   position: relative;
   gap: 12px;
 }
-
+.custom-input-clear-icon {
+  right: 16px;
+  bottom: 14px;
+  cursor: pointer;
+  position: absolute;
+}
 .custom-input {
   outline: none;
   border: 1px solid var(--color-gray-border);
-  height: 43px;
-  background: var(--color-black-main);
+  height: 52px;
+  background: var(--color-black-secondary);
   padding: 12px 16px;
   border-radius: 8px;
   font-size: 16px;
