--- a/src/components/UI/Button/button.css
+++ b/src/components/UI/Button/button.css
@@ -24,5 +24,6 @@
   height: 33px;
 }
 .custom-btn:disabled {
-  opacity: 0.5;
+  background: rgba(95, 88, 255, 0.5);
+  color: rgba(244, 244, 244, 0.5);
 }
