--- a/src/components/UI/Input/input.css
+++ b/src/components/UI/Input/input.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  gap: 12px;
+  gap: 8px;
 }
 .custom-input-clear-icon {
   right: 16px;
@@ -12,7 +12,7 @@
 }
 .custom-input {
   outline: none;
-  border: 1px solid var(--color-gray-border);
+  border: 1px solid var(--color-gray-border-secondary);
   height: 52px;
   background: var(--color-black-secondary);
   padding: 12px 16px;
@@ -22,6 +22,9 @@
   line-height: 19px;
   letter-spacing: -0.02em;
   color: var(--color-white-text);
+}
+.custom-input:focus {
+  border: 1px solid var(--color-gray-border-light);
 }
 .custom-input-error {
   border-color: var(--color-red-main);
@@ -41,7 +44,7 @@
 }
 .custom-input-sub-label,
 .custom-input-label {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 19px;
   letter-spacing: -0.02em;
