--- a/src/components/UI/Select/select.css
+++ b/src/components/UI/Select/select.css
@@ -1,10 +1,10 @@
 .custom-select-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 8px;
 }
 .custom-select-label {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 19px;
   letter-spacing: -0.02em;
@@ -13,7 +13,7 @@
 }
 .custom-select {
   outline: none;
-  border: 1px solid var(--color-gray-border);
+  border: 1px solid var(--color-gray-border-secondary);
   height: 52px;
   background: var(--color-black-secondary);
   padding: 12px 16px;
