--- a/src/components/Faucet/styled.css
+++ b/src/components/Faucet/styled.css
@@ -14,6 +14,7 @@
 }
 .faucet-main-title {
   font-size: 24px;
+  text-transform: capitalize;
   font-weight: 700;
   line-height: 28px;
   letter-spacing: -0.02em;
