Add new logos and enhance header and select components
- Added `faucet-short-logo.png` for responsive design.
- Updated header to use a picture element for logo switching.
- Improved select component with custom dropdown indicator.
- Adjusted CSS for better layout and responsiveness in various components.

--- a/src/components/UI/Select/select.css
+++ b/src/components/UI/Select/select.css
@@ -24,3 +24,20 @@
   letter-spacing: -0.02em;
   color: var(--color-white-text);
 }
+
+.chevronDownIconWrapper {
+  width: 24px;
+  height: 24px;
+  position: relative;
+  right: 8px;
+}
+
+.chevronDownIcon {
+  width: 24px;
+  height: 24px;
+  transform: rotate(0deg);
+}
+
+.chevronDownIconWrapper[data-open="true"] > .chevronDownIcon {
+  transform: rotate(180deg);
+}
