--- a/src/components/Faucet/styled.css
+++ b/src/components/Faucet/styled.css
@@ -25,9 +25,10 @@
   line-height: 19px;
   letter-spacing: -0.02em;
   color: var(--color-white-secondary);
+  margin: 0;
 }
 .faucet-container {
-  padding: 32px 32px 38px 32px;
+  padding: 24px 16px;
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -86,7 +87,9 @@
 .token-selected-icon {
   width: 24px;
   height: 24px;
+  display: var(--icon-visible, "block");
 }
+
 .my-address-wrapper {
   display: flex;
   flex-direction: column;
@@ -104,14 +107,14 @@
 }
 .faucet-amount-container {
   display: flex;
+  flex-direction: column;
   gap: 16px;
 }
 .amount-field-wrapper {
   width: 100%;
 }
 .token-field-wrapper {
-  width: 168px;
-  min-width: 168px;
+  width: 100%;
 }
 .requestBtnText {
   font-weight: 700;
@@ -132,4 +135,19 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+@media (min-width: 768px) {
+  .faucet-container {
+    padding: 32px 32px 38px 32px;
+  }
+
+  .token-field-wrapper {
+    width: 168px;
+    min-width: 168px;
+  }
+
+  .faucet-amount-container {
+    flex-direction: row;
+  }
 }
