--- a/src/components/Header/styled.css
+++ b/src/components/Header/styled.css
@@ -2,12 +2,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 44px;
+  padding: 12px 16px;
   background: transparent;
   border-bottom: 1px solid #ffffff40;
   width: 100%;
   height: 67px;
 }
-.header-logo-image {
-  width: 172px;
+.header-logo-image,
+.header-logo {
+  width: 36px;
+}
+
+@media (min-width: 768px) {
+  .header-wrapper {
+    padding: 12px 44px;
+  }
+
+  .header-logo-image,
+  .header-logo {
+    width: 127px;
+  }
 }
