--- a/src/components/UI/Input/input.css
+++ b/src/components/UI/Input/input.css
@@ -15,7 +15,7 @@
   border: 1px solid var(--color-gray-border-secondary);
   height: 52px;
   background: var(--color-black-secondary);
-  padding: 12px 16px;
+  padding: 12px 48px 12px 16px;
   border-radius: 8px;
   font-size: 16px;
   font-weight: 400;
